feat: add Zimmereditor for room management with HTML UI and JSON API
- Implemented a single-file PHP application for managing rooms.
- Added robust configuration loading from nested paths.
- Established a MySQL database connection with error handling.
- Created utility functions for JSON responses and data sanitization.
- Implemented actions for listing, saving, and managing room data.
- Developed a responsive HTML interface with a modern design.
- Included drag-and-drop functionality for room sorting.
- Added color palette for room color selection.
- Implemented filtering and selection features for room entries.

--- a/zp/timeline-config.html
+++ b/zp/timeline-config.html
@@ -720,6 +720,8 @@
                     <button class="btn btn-secondary" onclick="resetToDefaults()">🔄 Zurücksetzen</button>
                     <button class="btn btn-success" onclick="applyAndClose()">✅ Anwenden & Schließen</button>
                     <a href="timeline-unified.html" class="btn btn-secondary">🏠 Zurück zur Timeline</a>
+                    <a href="zimmereditor/index.php" class="btn btn-primary" title="Zimmer verwalten">🛏️ Zimmereditor
+                        öffnen</a>
                 </div>
             </div>
         </div>
