--- a/zp/timeline-unified.html
+++ b/zp/timeline-unified.html
@@ -1047,6 +1047,12 @@
         .debug-toggle:hover {
             background: #444;
         }
+
+        /* Debug console disabled by default */
+        #debug-console,
+        #debug-toggle {
+            display: none !important;
+        }
     </style>
 </head>
 
